<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="회원가입"
                android:textColor="#63b1d5"
                android:textSize="20dp" />

        </androidx.appcompat.widget.Toolbar>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/linearLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="70dp"
                    android:layout_marginRight="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:hint="아이디(이메일 주소)"
                        android:maxLength="19" />

                    <Button
                        android:id="@+id/check"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/colorAccent"
                        android:text="중복 확인"
                        android:textColor="#ffffff" />
                </LinearLayout>

                <TextView
                    android:id="@+id/idcheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="*중복확인을 해주세요" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:hint="비밀번호"
                    android:inputType="textPassword"
                    android:maxLength="19" />

                <TextView
                    android:id="@+id/passcheck"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="*영어와 숫자를 조합하여 최소 8자 이상 입력해 주세요" />

                <LinearLayout
                    android:id="@+id/linearLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/passwordcheck"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginBottom="10dp"
                        android:layout_weight="10"
                        android:hint="비밀번호 확인"
                        android:inputType="textPassword"
                        android:maxLength="19" />

                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1" />
                </LinearLayout>

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:hint="이름"
                    android:maxLength="19" />

                <LinearLayout
                    android:id="@+id/linearLayout2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/birthdate"
                        android:layout_width="254dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="10"
                        android:hint="생년월일(8자리 입력)"
                        android:inputType="number"
                        android:maxLength="8" />

                    <RadioGroup
                        android:id="@+id/radio"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/man"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="남성" />

                        <RadioButton
                            android:id="@+id/women"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="여성" />
                    </RadioGroup>

                </LinearLayout>

                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_marginBottom="104dp"
                    android:background="@drawable/btn"
                    android:text="다음"
                    android:textColor="#ffffff" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.drawerlayout.widget.DrawerLayout>