...
            android:textColor="#ffffff"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoLogin" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
...
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:background="@drawable/btn2"
                android:gravity="center"
                android:text="Sign Up"
                android:textColor="#3cbffc"
                android:textSize="15sp" />

        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
